@@ -1,3 +1,7 @@
+2017-10-23  Markus Gans  <guru.mail@muenster.de>
+	* A FListView tree branch can now be expand and collapsed 
+	  with a single click
+
 2017-10-19  Markus Gans  <guru.mail@muenster.de>
 	* Optimized Color palette (less saturated colors)
 
